--- a/05-python-functions.ipynb
+++ b/05-python-functions.ipynb
@@ -120,10 +120,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def name():\n",
+    "    name = 'srushti'\n",
+    "    print(name)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "srushti\n"
+     ]
+    }
+   ],
+   "source": [
+    "name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "srushti 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "#info is a funtion name\n",
+    "def info(name,age):\n",
+    "    print(name ,age)\n",
+    "\n",
+    "#call function\n",
+    "info(\"srushti\",21)\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "<function func1 at 0x000001AC940EE280> "
+     ]
+    }
+   ],
+   "source": [
+    "def func1(*args):\n",
+    "    for i in args:\n",
+    "        print(i)\n",
+    "\n",
+    "func1(20,40,50)\n",
+    "func1(60,70)        \n",
+    "print(func1,end = \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(70, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#return multiple values from a function\n",
+    "def calculation(a,b):\n",
+    "    addition=a+b\n",
+    "    substraction=a-b\n",
+    "    return addition, substraction\n",
+    "result=calculation(50,20)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculation(a,b):\n",
+    "    return a+b,a-b\n",
+    "\n",
+    "    add,sub = calculation(99,45)\n",
+    "    print(add,sub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'add' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Python\\python_practice\\05-python-functions.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Python/python_practice/05-python-functions.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(add,sub)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'add' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(add,sub)"
+   ]
   }
  ],
  "metadata": {
