--- a/05-python-functions.ipynb
+++ b/05-python-functions.ipynb
@@ -1,6 +1,11 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -253,6 +258,139 @@
    ],
    "source": [
     "print(add,sub)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##- positional argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def info(name,age):\n",
+    "    print(f\"i am {name} and i am {age} years old\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i am srushti and i am 21 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "info('srushti',21)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##-keyword arguments\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i am srushti and i am 21 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "info(name='srushti',age=21)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##-default arguments\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def info(name,age,mobile= 'none'):\n",
+    "    if mobile:\n",
+    "        print(f\"i am {name} and i am {age} years old you can contact me on {mobile}\")\n",
+    "    else:\n",
+    "        print(f\"i am {name} and i am {age} years old\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i am srushti and i am 21 years old you can contact me on 7880786756\n"
+     ]
+    }
+   ],
+   "source": [
+    "info(\"srushti\",21,7880786756)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##-swap function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#python program to swap first and last element of a list\n",
+    "def swaplist(newlist):\n",
+    "    size =len(newlist)\n",
+    "\n",
+    "    #swapping\n",
+    "    temp = newlist[0]\n",
+    "    newlist[0]=newlist[size-1]\n",
+    "    newlist[size-1]=temp\n",
+    "\n",
+    "    return newlist\n",
+    "    \n",
+    "    newlist\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#"
    ]
   }
  ],
