--- a/04-python-lists.ipynb
+++ b/04-python-lists.ipynb
@@ -517,6 +517,103 @@
    "source": [
     "max(list1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 is in l\n"
+     ]
+    }
+   ],
+   "source": [
+    "l =[2,4,6,8]\n",
+    "if 6 in l:\n",
+    "    print(\"6 is in l\")\n",
+    "else:\n",
+    "    print(\"6 is not in l\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['black', 'white', 'blue']\n",
+      "[1, 3, 5]\n",
+      "['2.2', '4.4', '6.6']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [\"black\",\"white\",\"blue\"]\n",
+    "list2 = [1,3,5]\n",
+    "list3 = ['2.2','4.4','6.6']\n",
+    "print(list1)\n",
+    "print(list2)\n",
+    "print(list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list4 = list2[:]\n",
+    "print(list4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['black', 'white', 'blue', 'green']\n",
+      "[1, 3, 5, 7]\n",
+      "['2.2', '4.4', '6.6', '8.8']\n",
+      "[1, 3, 5, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1.append(\"green\")\n",
+    "list2.append(7)\n",
+    "list3.append('8.8')\n",
+    "list4.append(9)\n",
+    "print(list1)\n",
+    "print(list2)\n",
+    "print(list3)\n",
+    "print(list4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
