--- a/05-python-functions.ipynb
+++ b/05-python-functions.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,8 +380,55 @@
     "\n",
     "    return newlist\n",
     "    \n",
-    "    newlist\n",
+    "    newlist = [11,12,13,14]\n",
+    "    print(swaplist(newlist))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[3, 5, 7]\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program to illustrate the usages of *operand\n",
+    "list = [1,3,5,7,9]\n",
+    "a ,*b,c = list\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16, 12, 14, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swaplist(list):\n",
+    "    start,*middle,end =list\n",
+    "    list =[end,*middle,start]\n",
+    "    return list\n",
+    "newlist =[10,12,14,16]\n",
+    "print(swaplist(newlist))    "
    ]
   },
   {
@@ -389,9 +436,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#"
-   ]
+   "source": []
   }
  ],
  "metadata": {
