--- a/05-python-loops.ipynb
+++ b/05-python-loops.ipynb
@@ -123,7 +123,68 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- program to find the sum of all the even numbers stored in a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the sum of all the even numbers in the list  2\n",
+      "the sum of all the even numbers in the list  6\n",
+      "the sum of all the even numbers in the list  12\n",
+      "the sum of all the even numbers in the list  20\n",
+      "the sum of all the even numbers in the list  30\n",
+      "the sum of all the even numbers in the list  42\n",
+      "the sum of all the even numbers in the list  56\n"
+     ]
+    }
+   ],
+   "source": [
+    "#list of even numbers\n",
+    "numbers =[2,4,6,8,10,12,14]\n",
+    "#variable to stored the sum\n",
+    "sum = 0\n",
+    "for val in numbers:\n",
+    "    sum =sum+val\n",
+    "    print(\"the sum of all the even numbers in the list \",sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the sum of all the numbers is  30\n"
+     ]
+    }
+   ],
+   "source": [
+    "#list of numbers\n",
+    "numbers = [2,4,6,8,10]\n",
+    "#variables to store the sum \n",
+    "sum = 0\n",
+    "for val in numbers:\n",
+    "    sum =sum+val\n",
+    "print(\"the sum of all the numbers is \",sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Star pattern"
+   ]
   },
   {
    "cell_type": "code",
@@ -134,11 +195,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "range(0, 10)\n"
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n",
+      "* * * * * * \n",
+      "* * * * * * * \n",
+      "* * * * * * * * \n",
+      "* * * * * * * * * \n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "for i in range(1,10):\n",
+    " print(i * \"* \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * * \n",
+      "* * * * * \n",
+      "* * * * * * * \n",
+      "* * * * * * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,11,2):\n",
+    "    print(i * \"* \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * *\n",
+      " * * * * *\n",
+      " * * * * * * * *\n",
+      " * * * * * * * * * * *\n",
+      " * * * * * * * * * * * * * *\n",
+      " * * * * * * * * * * * * * * * * *\n",
+      " * * * * * * * * * * * * * * * * * * * *\n",
+      " * * * * * * * * * * * * * * * * * * * * * * *\n",
+      " * * * * * * * * * * * * * * * * * * * * * * * * * *\n",
+      " * * * * * * * * * * * * * * * * * * * * * * * * * * * * *\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(2,30,3):\n",
+    "    print(i * \" *\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      " * \n",
+      " *\n",
+      "* * * * * * \n",
+      " ****** \n",
+      " * * * * * *\n",
+      "* * * * * * * * * * * \n",
+      " *********** \n",
+      " * * * * * * * * * * *\n",
+      "* * * * * * * * * * * * * * * * \n",
+      " **************** \n",
+      " * * * * * * * * * * * * * * * *\n",
+      "* * * * * * * * * * * * * * * * * * * * * \n",
+      " ********************* \n",
+      " * * * * * * * * * * * * * * * * * * * * *\n",
+      "* * * * * * * * * * * * * * * * * * * * * * * * * * \n",
+      " ************************** \n",
+      " * * * * * * * * * * * * * * * * * * * * * * * * * *\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,30,5):\n",
+    "    print(i * \"* \")\n",
+    "    print(\" \" + i * \"*\" +\" \")\n",
+    "    print(i * \" *\")"
+   ]
   },
   {
    "cell_type": "code",
