--- a/07-python-sets.ipynb
+++ b/07-python-sets.ipynb
@@ -9,6 +9,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#difference between sets and dictionary\n",
+    "#initialze a with {}\n",
+    "a = {}\n",
+    "\n",
+    "#cheak data type of a\n",
+    "print(type(a))\n",
+    "\n",
+    "#initialize a with set()\n",
+    "a=set()\n",
+    "\n",
+    "#cheak data type of a\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -138,12 +167,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unioun using union() function\n",
+      "{'manti', 'ganya', 'toni', 'chotashubhya', 'nikita', 'acchi', 'saurabh', 'gavi', 'moni', 'ad', 'shubham', 'gaurya', 'dhanya'}\n",
+      "union using '|' operator \n",
+      "{'manti', 'ganya', 'toni', 'chotashubhya', 'nikita', 'acchi', 'saurabh', 'gavi', 'moni', 'ad', 'shubham', 'gaurya', 'dhanya'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#python program to demonstrate union of two set\n",
+    "Boys = {\"shubham\",\"saurabh\",\"dhanya\",\"chotashubhya\",\"gaurya\",\"ad\",\"ganya\"}\n",
+    "Girls = {\"nikita\",\"toni\",\"acchi\",\"gavi\",\"manti\",\"moni\"}\n",
+    "#using union() function\n",
+    "friends = Boys.union(Girls)\n",
+    "print(\"unioun using union() function\")\n",
+    "print(friends) \n",
+    "\n",
+    "#union using \"|\"\n",
+    "friends =Boys|Girls\n",
+    "print(\"union using '|' operator \")\n",
+    "print(friends) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n",
+      "{'hello', (1, 2, 3), 4.5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#different type of sets in python\n",
+    "#sets of intgers\n",
+    "my_set ={1,2,3}\n",
+    "print(my_set)\n",
+    "\n",
+    "#set of mixed datatypes\n",
+    "my_set ={ 4.5,\"hello\",(1,2,3)}\n",
+    "print(my_set)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#python program to demonstrate union of set "
-   ]
+   "source": []
   }
  ],
  "metadata": {
