--- a/08-lambda-function.ipynb
+++ b/08-lambda-function.ipynb
@@ -30,12 +30,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mylist =[1,2,3,4,5,6,7,8,9]\n",
+    "even_list = list(filter(lambda x:(x%2==0),mylist))\n",
+    "print(mylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#"
-   ]
+   "source": []
   }
  ],
  "metadata": {
