--- a/03-python-operators-conditional-statements.ipynb
+++ b/03-python-operators-conditional-statements.ipynb
@@ -319,13 +319,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0906ddc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number is odd\n",
+      "number is even\n",
+      "number is odd\n",
+      "number is even\n",
+      "number is odd\n",
+      "number is even\n",
+      "number is odd\n",
+      "number is even\n",
+      "number is odd\n",
+      "number is even\n"
+     ]
+    }
+   ],
    "source": [
-    "#"
+    "list=[11,12,13,14,15,16,17,18,19,20]\n",
+    "for i in list:\n",
+    "    i=i%2\n",
+    "    if i==0:\n",
+    "        print(\"number is even\")\n",
+    "    else:\n",
+    "        print(\"number is odd\")    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d699bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
